--- a/Report.html
+++ b/Report.html
@@ -14289,14 +14289,30 @@ a.anchor-link {
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p>To solve this problem, I have implemented the Deep Q Learning algorithm proposed in <a href="https://storage.googleapis.com/deepmind-media/dqn/DQNNaturePaper.pdf">this paper</a></p>
+<p>To solve this problem, I have implemented the Deep Q Learning algorithm proposed in [this paper] (<a href="https://storage.googleapis.com/deepmind-media/dqn/DQNNaturePaper.pdf">https://storage.googleapis.com/deepmind-media/dqn/DQNNaturePaper.pdf</a>) based on PyTorch</p>
+<p><strong>Model Structure</strong></p>
 <p>This model consists of three layers:</p>
 <ul>
 <li>Fully connected layer - input: 37 (state size) output: 64 activation : Relu</li>
 <li>Fully connected layer - input: 64 output 64 activation : Relu</li>
 <li>Fully connected layer - input: 64 output: 4 (action size)</li>
 </ul>
-<p>The detailed training parameters can be found in <code>dqn_agent.py</code></p>
+<p><strong>Hyperparameters</strong></p>
+<p>The detailed training parameters are as follows:</p>
+<ul>
+<li>Batch size: 64</li>
+<li>Learning rate = 5e-4</li>
+<li>Optimizer: AdAM</li>
+<li>Loss: MSE</li>
+<li>Replay buffer size = 1e5</li>
+<li>Discount factor = 0.99</li>
+<li>Soft update value = 1e-3</li>
+<li>Target model update frequency : 4 time steps</li>
+<li>Maximum episodes = 500</li>
+<li>Starting epsilion = 1.0</li>
+<li>Ending epsilion = 0.005</li>
+<li>Epsilion decay rate = 0.97</li>
+</ul>
 
 </div>
 </div>
@@ -14307,7 +14323,7 @@ a.anchor-link {
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p>After 275 episodes of training, the agent successfully achieved an average score of +13 over 100 consecutive episodes. The detailed training results and plots can be found in <code>Navigation.ipynb</code></p>
+<p>After 375 episodes of training, the agent successfully achieved an average score of +13 over 100 consecutive episodes. The detailed training results and plots can be found in <code>Navigation.ipynb</code></p>
 
 </div>
 </div>
