--- a/Report.html
+++ b/Report.html
@@ -14300,18 +14300,18 @@ a.anchor-link {
 <p><strong>Hyperparameters</strong></p>
 <p>The detailed training parameters are as follows:</p>
 <ul>
-<li>Batch size: 64</li>
+<li>Batch size = 64</li>
 <li>Learning rate = 5e-4</li>
-<li>Optimizer: AdAM</li>
-<li>Loss: MSE</li>
 <li>Replay buffer size = 1e5</li>
 <li>Discount factor = 0.99</li>
 <li>Soft update value = 1e-3</li>
-<li>Target model update frequency : 4 time steps</li>
 <li>Maximum episodes = 500</li>
 <li>Starting epsilion = 1.0</li>
 <li>Ending epsilion = 0.005</li>
 <li>Epsilion decay rate = 0.97</li>
+<li>Optimizer: AdAM</li>
+<li>Loss: MSE</li>
+<li>Target model update frequency: 4 time steps</li>
 </ul>
 
 </div>
